- implemented bingo selection logic

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@typescript-eslint/recommended",
-        "prettier"
+        "prettier",
+        "plugin:react-hooks/recommended"
     ],
     "overrides": [
     ],
@@ -21,8 +22,17 @@
         "react",
         "react-hooks",
         "@typescript-eslint",
-        "prettier"
+        "prettier",
+        "unused-imports"
     ],
     "rules": {
+      "unused-imports/no-unused-imports": "error",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "error"
+    },
+    "settings": {
+        "react": {
+           "version": "detect"
+        }
     }
 }
