--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
